--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='https://www.linkedin.com/in/jie-liang-maia/'"
           />
           <img
             src="./assets/github.png"
@@ -68,6 +68,7 @@
             class="icon"
             onclick="location.href='https://github.com/'"
           />
+          <!-- 选取部分github repo对外公开 -->
         </div>
       </div>
     </section>
@@ -227,12 +228,14 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
+                <!-- 选取部分github repo对外公开 -->
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
+                <!-- 选取部分github repo对外公开 -->
                 Live Demo
               </button>
             </div>
