--- a/index.html
+++ b/index.html
@@ -195,6 +195,36 @@
               </article>
               <article>
                 <div>
+                  <h3>MongoDB</h3>
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>Vercel</h3>
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>chatpgt 4</h3>
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>Alibaba Cloud</h3>
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>Tailwind CSS</h3>
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>VS Code</h3>
+                </div>
+              </article>
+              <article>
+                <div>
                   <h3>Chrome Dev Tools</h3>
                 </div>
               </article>
@@ -222,7 +252,9 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">
+              Project TechTutor
+            </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -248,7 +280,9 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">
+              Project Two in preparation. <br />Stay tuned for updates!
+            </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -264,7 +298,7 @@
               </button>
             </div>
           </div>
-          <div class="details-container color-container">
+          <!-- <div class="details-container color-container">
             <div class="article-container">
               <img
                 src="./assets/project-3.png"
@@ -287,7 +321,7 @@
                 Live Demo
               </button>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <img
