project button link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="Jie Liang profile picture" />
+        <img
+          src="./assets/profile-pic.png"
+          alt="Jie Liang profile picture"
+          class="about-pic"
+        />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -62,13 +66,13 @@
             class="icon"
             onclick="location.href='https://www.linkedin.com/in/jie-liang-maia/'"
           />
-          <img
+
+          <!-- <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
             onclick="location.href='https://github.com/'"
-          />
-          <!-- 选取部分github repo对外公开 -->
+          /> -->
         </div>
       </div>
     </section>
@@ -193,11 +197,11 @@
                   <h3>Github Copilot</h3>
                 </div>
               </article>
-              <article>
+              <!-- <article>
                 <div>
                   <h3>MongoDB</h3>
                 </div>
-              </article>
+              </article> -->
               <article>
                 <div>
                   <h3>Vercel</h3>
@@ -205,7 +209,7 @@
               </article>
               <article>
                 <div>
-                  <h3>chatpgt 4</h3>
+                  <h3>ChatGPT 4</h3>
                 </div>
               </article>
               <article>
@@ -260,14 +264,26 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
-                <!-- 选取部分github repo对外公开 -->
+                Hosted on Alibaba
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://landing-page-formal.vercel.app/'"
+              >
+                <!-- albaba link -->
+                Hosted on Vercel
+              </button>
+
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/'"
+              >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
-                <!-- 选取部分github repo对外公开 -->
                 Live Demo
               </button>
             </div>
