add alibaba link and hide unfinished button

--- a/index.html
+++ b/index.html
@@ -262,8 +262,9 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://techtutor.jieliang.fun/'"
               >
+                <!-- deploy the web to alibaba -->
                 Hosted on Alibaba
               </button>
               <button
@@ -276,16 +277,17 @@
 
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Molly503/landing-page-formal'"
               >
                 Github
               </button>
-              <button
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Live Demo
-              </button>
+              </button> -->
+              <!-- demo would be made untill all functions added -->
             </div>
           </div>
           <div class="details-container color-container">
@@ -300,7 +302,7 @@
               Project Two in preparation. <br />Stay tuned for updates!
             </h2>
             <div class="btn-container">
-              <button
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
@@ -311,7 +313,7 @@
                 onclick="location.href='https://github.com/'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
           <!-- <div class="details-container color-container">
