--- a/index.html
+++ b/index.html
@@ -371,6 +371,14 @@
         </div>
         <div class="contact-info-container">
           <img
+            src="./assets/phone.png"
+            alt="Email icon"
+            class="icon contact-icon email-icon"
+          />
+          <p class="email-link">+86 15821720755</p>
+        </div>
+        <div class="contact-info-container">
+          <img
             src="./assets/linkedin.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
