--- a/index.html
+++ b/index.html
@@ -367,15 +367,14 @@
               >liangj@tcd.ie</a
             >
           </p>
-          <!-- 没办法直接跳转链接 -->
         </div>
         <div class="contact-info-container">
           <img
             src="./assets/phone.png"
-            alt="Email icon"
-            class="icon contact-icon email-icon"
+            alt="Phone icon"
+            class="icon contact-icon phone-icon"
           />
-          <p class="email-link">+86 15821720755</p>
+          <p>+86 15821720755</p>
         </div>
         <div class="contact-info-container">
           <img
