--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://www.linkedin.com/in/jie-liang-maia/'"
+            onclick="location.href='https://www.linkedin.com/in/jie-liang-molly/'"
           />
 
           <!-- <img
@@ -383,7 +383,7 @@
             class="icon contact-icon"
           />
           <p>
-            <a href="https://www.linkedin.com/in/jie-liang-maia/">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/jie-liang-molly/">LinkedIn</a>
           </p>
         </div>
       </div>
