update title and stack

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Jie Liang</h1>
-        <p class="section__text__p2">Frontend Developer</p>
+        <p class="section__text__p2">Web Developer</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -96,7 +96,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>5+ years in Translation <br />1+ years in HR</p>
+              <p>5+ years in Translation <br />1.5 years in HR</p>
             </div>
             <div class="details-container">
               <img
@@ -138,7 +138,7 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend & Backend Dev</h2>
+            <h2 class="experience-sub-title">Frontend & Backend Development</h2>
             <div class="article-container">
               <article>
                 <div>
@@ -197,11 +197,11 @@
                   <h3>Github Copilot</h3>
                 </div>
               </article>
-              <!-- <article>
+              <article>
                 <div>
                   <h3>MongoDB</h3>
                 </div>
-              </article> -->
+              </article>
               <article>
                 <div>
                   <h3>Vercel</h3>
@@ -281,13 +281,6 @@
               >
                 Github
               </button>
-              <!-- <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button> -->
-              <!-- demo would be made untill all functions added -->
             </div>
           </div>
           <div class="details-container color-container">
