--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Jie Liang</h1>
-        <p class="section__text__p2">Web Developer</p>
+        <p class="section__text__p2">Data Analyst</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -96,7 +96,10 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>5+ years in Translation <br />1.5 years in HR</p>
+              <p>
+                2.5 years in data analysis
+                <br />5+ years in Translation <br />1.5 years in HR
+              </p>
             </div>
             <div class="details-container">
               <img
@@ -109,18 +112,25 @@
             </div>
           </div>
           <div class="text-container">
+            <h3>Certificates</h3>
+
             <p>
-              Throughout my professional journey, I've discovered that my
-              strengths and preferences align more closely with roles that offer
-              autonomy and the space to focus deeply on tasks. Through my roles
-              in translation and HR, I gained invaluable experience in
-              understanding and navigating diverse team dynamics. While I deeply
-              value the insights from these interpersonal interactions, I
-              discovered that I am particularly energized by focusing on
-              individual tasks and projects. This reflection led me to seek a
-              career path where I can channel my passion for deep work and
-              creativity into tangible outcomes, aligning perfectly with the
-              nature of web development.
+              Learn the statistics & probability for data science and business
+              analysis
+              <br />
+              Data Analytics with Python, SQL, Tableau & ChatGPT projects
+              <br />
+              <!-- A/B Testing
+              <br /> -->
+              HR & People Data and Analytics Fundamentals
+              <br />
+              The Data Science of Using People Analytics
+              <br />
+              Meta Front-End Developer
+              <br />
+              Learn TypeScript
+              <br />
+              (by Coursera, Udemy & Linkedin)
             </p>
           </div>
         </div>
@@ -138,6 +148,63 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
+            <h2 class="experience-sub-title">Data Science</h2>
+            <div class="article-container">
+              <!-- add information -->
+              <article>
+                <div>
+                  <h3>Python</h3>
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>Pandas</h3>
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>Numpy</h3>
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>Matplotlib</h3>
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>MySQL</h3>
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>Tableau</h3>
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>Google Sheets</h3>
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>Excel</h3>
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>Jupyter</h3>
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>Git & Github</h3>
+                </div>
+              </article>
+            </div>
+            <br />
+            <br />
+            <br />
             <h2 class="experience-sub-title">Frontend & Backend Development</h2>
             <div class="article-container">
               <article>
@@ -165,27 +232,18 @@
                   <h3>TypeScript</h3>
                 </div>
               </article>
-              <article>
-                <div>
-                  <h3>MySQL</h3>
-                </div>
-              </article>
 
-              <article>
+              <!-- <article>
                 <div>
                   <h3>Node.js/Express</h3>
                 </div>
-              </article>
+              </article> -->
               <article>
                 <div>
                   <h3>Next.js</h3>
                 </div>
               </article>
-              <article>
-                <div>
-                  <h3>Git & Github</h3>
-                </div>
-              </article>
+
               <article>
                 <div>
                   <h3>Figma</h3>
@@ -207,11 +265,7 @@
                   <h3>Vercel</h3>
                 </div>
               </article>
-              <article>
-                <div>
-                  <h3>ChatGPT 4</h3>
-                </div>
-              </article>
+
               <article>
                 <div>
                   <h3>Alibaba Cloud</h3>
@@ -367,7 +421,7 @@
             alt="Phone icon"
             class="icon contact-icon phone-icon"
           />
-          <p>+86 15821720755</p>
+          <p>+86 13917107043</p>
         </div>
         <div class="contact-info-container">
           <img
