--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
               <div class="btn-container">
                 <button
                   class="btn btn-color-2"
-                  onclick="window.open('assets/HRIS23-Data-Set.xlsx')"
+                  onclick="window.open('./assets/HRIS23-Data-Set.xlsx')"
                 >
                   Download Excel
                 </button>
