--- a/index.html
+++ b/index.html
@@ -301,6 +301,8 @@
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
+
+<!-- Interactive Dashboard -->
         <div class="about-containers">
           <div class="details-container color-container">
             <div class="article-container">
@@ -325,6 +327,32 @@
             </div>
           </div>
         </div>
+<!-- Recruiting Metrics -->
+<div class="about-containers">
+  <div class="details-container color-container">
+    <div class="article-container">
+      <img
+        src="./assets/recruiting cover2.png"
+        alt="Project 1"
+        class="project-img"
+      />
+    </div>
+    <h2 class="experience-sub-title project-title">
+      Recruiting Metrics Analysis
+    </h2>
+    <div class="btn-container">
+   
+
+      <button
+        class="btn btn-color-2 project-btn"
+        onclick="location.href='https://github.com/Molly503/Recruiting-Metrics/blob/main/recruiting%20metrics-jie.ipynb'"
+      >
+        Github
+      </button>
+    </div>
+  </div>
+</div>
+<!-- TechTutor -->
         <div class="about-containers">
           <div class="details-container color-container">
             <div class="article-container">
@@ -362,7 +390,7 @@
             </div>
           </div>
         </div>
-
+<!-- Project in Prep -->
         <div class="about-containers">
           <div class="details-container color-container">
             <div class="article-container">
