--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
             Contact Info
           </button>
+          <button
+          class="btn btn-color-2"
+          onclick="window.open('./assets/certificate of completion-all.pdf')"
+        >
+        Certifications
+        </button>
         </div>
         <div id="socials-container">
           <img
@@ -198,6 +204,11 @@
               </article>
               <article>
                 <div>
+                  <h3>VS Code</h3>
+                </div>
+              </article>
+              <article>
+                <div>
                   <h3>Git & Github</h3>
                 </div>
               </article>
@@ -250,11 +261,11 @@
                 </div>
               </article>
 
-              <article>
+              <!-- <article>
                 <div>
                   <h3>Github Copilot</h3>
                 </div>
-              </article>
+              </article> -->
               <article>
                 <div>
                   <h3>MongoDB</h3>
@@ -276,11 +287,7 @@
                   <h3>Tailwind CSS</h3>
                 </div>
               </article>
-              <article>
-                <div>
-                  <h3>VS Code</h3>
-                </div>
-              </article>
+             
               <article>
                 <div>
                   <h3>Chrome Dev Tools</h3>
