--- a/index.html
+++ b/index.html
@@ -172,11 +172,7 @@
                   <h3>Numpy</h3>
                 </div>
               </article>
-              <article>
-                <div>
-                  <h3>Matplotlib</h3>
-                </div>
-              </article>
+             
               <article>
                 <div>
                   <h3>MySQL</h3>
@@ -185,6 +181,16 @@
               <article>
                 <div>
                   <h3>Tableau</h3>
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>Matplotlib</h3>
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>Seaborn</h3>
                 </div>
               </article>
               <article>
@@ -309,6 +315,45 @@
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
 
+
+        <!-- turnover project -->
+        <div class="about-containers">
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/turnover-cover-slides.png"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">
+              A Deep Dive into Turnover Patterns and Risk Factors
+            </h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('./assets/Insights and Strategic Recommendations.pptx')"
+              >
+                <!-- deploy the web to alibaba -->
+                Slides
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('./assets/A Deep Dive into Turnover Patterns and Risk Factors-report.pdf')"
+              >
+                <!-- albaba link -->
+                Report
+              </button>
+
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/Molly503/employee_turnover'"
+              >
+                Github
+              </button>
+            </div>
+          </div>
+        </div>        
 <!-- Interactive Dashboard -->
         <div class="about-containers">
           <div class="details-container color-container">
