--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/turnover-cover-slides.png"
+                src="./assets/cover-turnover.png"
                 alt="Project 1"
                 class="project-img"
               />
