--- a/index.html
+++ b/index.html
@@ -173,6 +173,12 @@
                 </div>
               </article>
              
+             
+              <article>
+                <div>
+                  <h3>Matplotlib</h3>
+                </div>
+              </article>
               <article>
                 <div>
                   <h3>MySQL</h3>
@@ -181,11 +187,6 @@
               <article>
                 <div>
                   <h3>Tableau</h3>
-                </div>
-              </article>
-              <article>
-                <div>
-                  <h3>Matplotlib</h3>
                 </div>
               </article>
               <article>
@@ -384,7 +385,7 @@
   <div class="details-container color-container">
     <div class="article-container">
       <img
-        src="./assets/recruiting cover2.png"
+        src="./assets/cover_recruiting.jpeg"
         alt="Project 1"
         class="project-img"
       />
