--- a/index.html
+++ b/index.html
@@ -268,11 +268,7 @@
                 </div>
               </article>
 
-              <!-- <article>
-                <div>
-                  <h3>Github Copilot</h3>
-                </div>
-              </article> -->
+       
               <article>
                 <div>
                   <h3>MongoDB</h3>
@@ -394,7 +390,13 @@
       Recruiting Metrics Analysis
     </h2>
     <div class="btn-container">
-   
+      <button
+      class="btn btn-color-2 project-btn"
+      onclick="window.open('./assets/Recruiting Metrics Analysis.pdf')"
+    >
+      <!-- albaba link -->
+      Report
+    </button>
 
       <button
         class="btn btn-color-2 project-btn"
