stack and cv changed

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Jie Liang_da_en_Mar5_2025.pdf')"
+            onclick="window.open('./assets/Jie Liang_da_en_present_2025 .pdf')"
           >
             Download CV
           </button>
@@ -204,6 +204,11 @@
               <article>
                 <div>
                   <h3>Excel</h3>
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>BigQuery</h3>
                 </div>
               </article>
               <article>
