--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ HR Analytics Dashboard | Insights & Performance Metrics
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('./assets/A Deep Dive into Turnover Patterns and Risk Factors-report.pdf')"
+                onclick="window.open('./assets/A Deep Dive into Turnover-report.pdf')"
               >
                 <!-- albaba link -->
                 Report
