upload executive summary

--- a/index.html
+++ b/index.html
@@ -385,6 +385,12 @@ HR Analytics Dashboard | Insights & Performance Metrics
               >
                 Github
               </button>
+              <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://www.notion.so/1d82c7b63f00807099bed698cf0328bb?pvs=4'"
+            >
+              Executive Summary
+            </button>
             </div>
           </div>
         </div>        
@@ -479,6 +485,7 @@ HR Analytics Dashboard | Insights & Performance Metrics
               >
                 Github
               </button>
+              
             </div>
           </div>
         </div>
