update summary, dashboard notebook and selfintro

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               />
               <h3>Experience</h3>
               <p>
-                2+ years in data analysis
+                2.5 years in data analysis
                 <br />
                 <!-- 5+ years in Translation <br /> -->
                 1.5 years in HR
@@ -340,13 +340,26 @@ HR Analytics Dashboard | Insights & Performance Metrics
       Tableau Public Link
       </button>
      
-
+      <button
+      class="btn btn-color-2 project-btn"
+      onclick="window.open('./assets/workforce analysis.pdf')"
+    >
+      <!-- albaba link -->
+      Analysis Notebook
+    </button>
       <button
         class="btn btn-color-2 project-btn"
         onclick="location.href='https://github.com/Molly503/HR-Analytics-Dashboard-Workforce-Insights-Performance-Metrics'"
       >
         Github
       </button>
+
+      <button
+      class="btn btn-color-2 project-btn"
+      onclick="location.href='https://www.notion.so/1dc2c7b63f008050b416d91b4e860bdc?pvs=4'"
+    >
+      Insight Summary
+    </button>
     </div>
   </div>
 </div>     
@@ -376,7 +389,7 @@ HR Analytics Dashboard | Insights & Performance Metrics
                 onclick="window.open('./assets/A Deep Dive into Turnover-report.pdf')"
               >
                 <!-- albaba link -->
-                Report
+                Analysis Notebook
               </button>
 
               <button
