update dashboard notebook

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ HR Analytics Dashboard | Insights & Performance Metrics
      
       <button
       class="btn btn-color-2 project-btn"
-      onclick="window.open('./assets/workforce analysis.pdf')"
+      onclick="window.open('./assets/workforce analysis notebook-2.pdf')"
     >
       <!-- albaba link -->
       Analysis Notebook
