--- a/index.html
+++ b/index.html
@@ -398,6 +398,7 @@ HR Analytics Dashboard | Insights & Performance Metrics
               >
                 Github
               </button>
+         
               <button
               class="btn btn-color-2 project-btn"
               onclick="location.href='https://www.notion.so/1d82c7b63f00807099bed698cf0328bb?pvs=4'"
@@ -412,22 +413,34 @@ HR Analytics Dashboard | Insights & Performance Metrics
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="assets/hr_dashboard.png"
+                src="assets/rentention dashboard.png"
                 alt="Project 2"
                 class="project-img"
               />
             </div>
             <h2 class="experience-sub-title project-title">
-              Interactive HR Dashboard
+              Employee Mobility & Retention Dashboard
             </h2>
             <div class="btn-container">
               <div class="btn-container">
+                        <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://public.tableau.com/app/profile/jie.liang3815/viz/mobilityandretentiondashboard_extract/TurnoverSummary'"
+            >
+              Tableau Dashboard
+            </button>
                 <button
                   class="btn btn-color-2"
                   onclick="window.open('./assets/HRIS23-Data-Set.xlsx')"
                 >
                   Download Excel
                 </button>
+                  <button
+        class="btn btn-color-2 project-btn"
+        onclick="location.href='https://github.com/Molly503/workforce_track'"
+      >
+        Github
+      </button>
               </div>
             </div>
           </div>
