tracking project update dashboard, insighs

--- a/index.html
+++ b/index.html
@@ -425,22 +425,29 @@ HR Analytics Dashboard | Insights & Performance Metrics
               <div class="btn-container">
                         <button
               class="btn btn-color-2 project-btn"
-              onclick="location.href='https://public.tableau.com/app/profile/jie.liang3815/viz/mobilityandretentiondashboard_extract/TurnoverSummary'"
+              onclick="location.href='https://public.tableau.com/app/profile/jie.liang3815/viz/mobilityandretentiondashboard_may19/TurnoverSummary'"
             >
               Tableau Dashboard
             </button>
-                <button
+                <!-- <button
                   class="btn btn-color-2"
                   onclick="window.open('./assets/HRIS23-Data-Set.xlsx')"
                 >
                   Download Excel
-                </button>
-                  <button
+                </button> -->
+                    <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://www.notion.so/Insights-Recommendations-1f82c7b63f008039818be1743840043f?pvs=4'"
+            >
+              Insights & Recommendations
+            </button> 
+                <button
         class="btn btn-color-2 project-btn"
         onclick="location.href='https://github.com/Molly503/workforce_track'"
       >
         Github
       </button>
+   
               </div>
             </div>
           </div>
