notion link update

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ HR Analytics Dashboard | Insights & Performance Metrics
             </button> 
                 <button
         class="btn btn-color-2 project-btn"
-        onclick="location.href='https://github.com/Molly503/workforce_track'"
+        onclick="location.href='https://www.notion.so/HR-Dashboard-Compensation-and-Cost-Insights-Summary-1dc2c7b63f008050b416d91b4e860bdc?pvs=4'"
       >
         Github
       </button>
