--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Jie Liang_da_en_present_2025 .pdf')"
+            onclick="window.open('./assets/Jie_da_en_jun10 2025.pdf')"
           >
             Download CV
           </button>
@@ -103,7 +103,7 @@
               />
               <h3>Experience</h3>
               <p>
-                3 years in data analysis
+                4 years in translation
                 <br />
                 <!-- 5+ years in Translation <br /> -->
                 2 years in HR
@@ -191,9 +191,9 @@
                   <h3>Tableau</h3>
                 </div>
               </article>
-              <article>
+           <article>
                 <div>
-                  <h3>Seaborn</h3>
+                  <h3>Power BI</h3>
                 </div>
               </article>
               <article>
@@ -206,11 +206,7 @@
                   <h3>Excel</h3>
                 </div>
               </article>
-              <article>
-                <div>
-                  <h3>BigQuery</h3>
-                </div>
-              </article>
+             
               <article>
                 <div>
                   <h3>Jupyter</h3>
