update cv, experience

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Jie_da_en_jun10 2025.pdf')"
+            onclick="window.open('./assets/Jie_da_en_flc_jun16 2025.pdf')"
           >
             Download CV
           </button>
@@ -103,10 +103,10 @@
               />
               <h3>Experience</h3>
               <p>
-                4 years in translation
+                 3 yrs in data analysis
                 <br />
-                <!-- 5+ years in Translation <br /> -->
-                2 years in HR
+           4 yrs in translation
+               
               </p>
             </div>
             <div class="details-container">
@@ -116,7 +116,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>BSc in English<br />MSc in Management (MBA)</p>
+              <p>MSc in Management (MBA)<br />BSc in English</p>
             </div>
           </div>
           <div class="text-container">
