--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
-<!-- dashboard in tableau -->
+<!-- Performance dashboard in tableau -->
 <div class="about-containers">
   <div class="details-container color-container">
     <div class="article-container">
@@ -444,7 +444,7 @@ HR Analytics Dashboard | Insights & Performance Metrics
             </div>
           </div>
         </div>        
-<!-- Interactive Dashboard -->
+<!-- Mobility Dashboard -->
         <div class="about-containers">
           <div class="details-container color-container">
             <div class="article-container">
@@ -488,6 +488,46 @@ HR Analytics Dashboard | Insights & Performance Metrics
             </div>
           </div>
         </div>
+
+      <!-- Coffee Retail in Excel -->
+        <div class="about-containers">
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="assets/coffee sales thumbnail.png"
+                alt="Project 2"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">
+              Coffee Retail Dashboard
+            </h2>
+            <div class="btn-container">
+              <div class="btn-container">
+                        <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://1drv.ms/x/c/8e4ae9b8e04fdc38/EZtpQ2_GboFEof-694vFcFoBbHg1LY6yiW6jUvMydQvkpQ'"
+            >
+              Excel Link
+            </button>
+                <button
+                  class="btn btn-color-2"
+                  onclick="window.open('./assets/coffeeOrders-jie-v7.xlsx')"
+                >
+                  Download Excel
+                </button>
+                    <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://www.notion.so/Coffee-Sales-Insight-and-Executive-Summary-2132c7b63f0080e1a041d158130c64d4?source=copy_link'"
+            >
+              Insights & Recommendations
+            </button> 
+         
+   
+              </div>
+            </div>
+          </div>
+        </div>  
 <!-- Recruiting Metrics -->
 <div class="about-containers">
   <div class="details-container color-container">
