upload recruiting funnel

--- a/index.html
+++ b/index.html
@@ -528,6 +528,37 @@ HR Analytics Dashboard | Insights & Performance Metrics
             </div>
           </div>
         </div>  
+<!-- Recruiting Funnel -->
+<div class="about-containers">
+  <div class="details-container color-container">
+    <div class="article-container">
+      <img
+        src="./assets/thumbnail funnel.png"
+        alt="Project 1"
+        class="project-img"
+      />
+    </div>
+    <h2 class="experience-sub-title project-title">
+      Recruiting Funnel 
+    </h2>
+    <div class="btn-container">
+      <button
+      class="btn btn-color-2 project-btn"
+      onclick="window.open('./assets/recruiting analysis_Jun16.pdf')"
+    >
+      <!-- albaba link -->
+      Dashboard in pdf 
+    </button>
+
+      <button
+        class="btn btn-color-2 project-btn"
+        onclick="window.open('https://app.powerbi.com/view?r=eyJrIjoiY2NmMjVkMTAtMWQ2Yi00NjFjLWFkZDEtOTJiMWRjNWE3Y2ZmIiwidCI6ImFiMTYzNWE4LWMwMTAtNDYxZS05ZGU5LTYwZDdkYjIxZGY1ZiIsImMiOjN9', '_blank')"
+      >
+        Power BI Link
+      </button>
+    </div>
+  </div>
+</div>
 <!-- Recruiting Metrics -->
 <div class="about-containers">
   <div class="details-container color-container">
@@ -539,7 +570,7 @@ HR Analytics Dashboard | Insights & Performance Metrics
       />
     </div>
     <h2 class="experience-sub-title project-title">
-      Recruiting Metrics Analysis
+      Recruiting Metrics
     </h2>
     <div class="btn-container">
       <button
