--- a/index.html
+++ b/index.html
@@ -488,7 +488,45 @@ HR Analytics Dashboard | Insights & Performance Metrics
             </div>
           </div>
         </div>
-
+ <!-- Turkish Clothing Retail in power bi -->
+        <div class="about-containers">
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="assets/rfm_photo.png"
+                alt="Project 2"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">
+              Consumer Insights: RFM Analysis for Turkish Clothing Retail
+            </h2>
+            <div class="btn-container">
+              <div class="btn-container">
+                        <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://app.powerbi.com/view?r=eyJrIjoiMjM1ZjExYTAtNmJjMC00ODU3LWFlZGUtMTQzM2ZiNzY0YmU0IiwidCI6ImFiMTYzNWE4LWMwMTAtNDYxZS05ZGU5LTYwZDdkYjIxZGY1ZiIsImMiOjN9'"
+            >
+              Power BI Link
+            </button>
+                <button
+                  class="btn btn-color-2"
+                  onclick="window.open('./assets/clv_retain_rfm_jul10.pdf')"
+                >
+                  Download Dashboard in pdf
+                </button>
+                    <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://www.notion.so/Consumer-Insights-RFM-Analysis-22a2c7b63f00806ab5ccca063e1dd034?source=copy_link'"
+            >
+              Insights 
+            </button> 
+         
+   
+              </div>
+            </div>
+          </div>
+        </div>  
       <!-- Coffee Retail in Excel -->
         <div class="about-containers">
           <div class="details-container color-container">
