--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ HR Analytics Dashboard | Insights & Performance Metrics
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="assets/rentention dashboard.png"
+                src="assets/mobility-thum.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -493,7 +493,7 @@ HR Analytics Dashboard | Insights & Performance Metrics
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="assets/rfm_photo.png"
+                src="assets/rfm-thum.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -505,13 +505,13 @@ HR Analytics Dashboard | Insights & Performance Metrics
               <div class="btn-container">
                         <button
               class="btn btn-color-2 project-btn"
-              onclick="location.href='https://app.powerbi.com/view?r=eyJrIjoiMjM1ZjExYTAtNmJjMC00ODU3LWFlZGUtMTQzM2ZiNzY0YmU0IiwidCI6ImFiMTYzNWE4LWMwMTAtNDYxZS05ZGU5LTYwZDdkYjIxZGY1ZiIsImMiOjN9'"
+              onclick="location.href='https://app.powerbi.com/view?r=eyJrIjoiODYwYzBhYzAtMDkzYy00ZmIwLWIzZjctZGVhYjU3MGU1MDBmIiwidCI6ImFiMTYzNWE4LWMwMTAtNDYxZS05ZGU5LTYwZDdkYjIxZGY1ZiIsImMiOjN9'"
             >
               Power BI Link
             </button>
                 <button
                   class="btn btn-color-2"
-                  onclick="window.open('./assets/clv_retain_rfm_jul10.pdf')"
+                  onclick="window.open('./assets/rfm update_jul15.pdf')"
                 >
                   Download Dashboard in pdf
                 </button>
