update mobility project and rfm project

--- a/index.html
+++ b/index.html
@@ -461,28 +461,23 @@ HR Analytics Dashboard | Insights & Performance Metrics
               <div class="btn-container">
                         <button
               class="btn btn-color-2 project-btn"
-              onclick="location.href='https://public.tableau.com/app/profile/jie.liang3815/viz/mobilityandretentiondashboard_may19/TurnoverSummary'"
+              onclick="location.href='https://public.tableau.com/app/profile/jie.liang3815/viz/mobilityandretentionJul21/TurnoverSummary'"
             >
               Tableau Dashboard
             </button>
-                <!-- <button
+                <button
                   class="btn btn-color-2"
-                  onclick="window.open('./assets/HRIS23-Data-Set.xlsx')"
+                  onclick="window.open('./assets/mobility and retention_jul21.pptx')"
                 >
-                  Download Excel
-                </button> -->
+                  Download Dashboard in ppt
+                </button>
                     <button
               class="btn btn-color-2 project-btn"
               onclick="location.href='https://www.notion.so/Insights-Recommendations-1f82c7b63f008039818be1743840043f?pvs=4'"
             >
-              Insights & Recommendations
+              Insights 
             </button> 
-                <button
-        class="btn btn-color-2 project-btn"
-        onclick="location.href='https://www.notion.so/HR-Dashboard-Compensation-and-Cost-Insights-Summary-1dc2c7b63f008050b416d91b4e860bdc?pvs=4'"
-      >
-        Github
-      </button>
+               
    
               </div>
             </div>
@@ -493,7 +488,7 @@ HR Analytics Dashboard | Insights & Performance Metrics
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="assets/rfm-thum.png"
+                src="assets/rfm-cover.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -505,13 +500,13 @@ HR Analytics Dashboard | Insights & Performance Metrics
               <div class="btn-container">
                         <button
               class="btn btn-color-2 project-btn"
-              onclick="location.href='https://app.powerbi.com/view?r=eyJrIjoiODYwYzBhYzAtMDkzYy00ZmIwLWIzZjctZGVhYjU3MGU1MDBmIiwidCI6ImFiMTYzNWE4LWMwMTAtNDYxZS05ZGU5LTYwZDdkYjIxZGY1ZiIsImMiOjN9'"
+              onclick="window.open('https://app.powerbi.com/view?r=eyJrIjoiODYwYzBhYzAtMDkzYy00ZmIwLWIzZjctZGVhYjU3MGU1MDBmIiwidCI6ImFiMTYzNWE4LWMwMTAtNDYxZS05ZGU5LTYwZDdkYjIxZGY1ZiIsImMiOjN9', '_blank')"
             >
               Power BI Link
             </button>
                 <button
                   class="btn btn-color-2"
-                  onclick="window.open('./assets/rfm update_jul15.pdf')"
+                  onclick="window.open('./assets/rfm update_jul21.pdf')"
                 >
                   Download Dashboard in pdf
                 </button>
