update excel project

--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@ HR Analytics Dashboard | Insights & Performance Metrics
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="assets/coffee sales thumbnail.png"
+                src="assets/coffee retail photo.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -539,13 +539,13 @@ HR Analytics Dashboard | Insights & Performance Metrics
               <div class="btn-container">
                         <button
               class="btn btn-color-2 project-btn"
-              onclick="location.href='https://1drv.ms/x/c/8e4ae9b8e04fdc38/EZtpQ2_GboFEof-694vFcFoBbHg1LY6yiW6jUvMydQvkpQ'"
+              onclick="location.href='https://1drv.ms/x/c/8e4ae9b8e04fdc38/EbH-6FVaTadJjLheRZYLpccBt0XXKOfPYhe5odtB_AC3vw'"
             >
               Excel Link
             </button>
                 <button
                   class="btn btn-color-2"
-                  onclick="window.open('./assets/coffeeOrders-jie-v7.xlsx')"
+                  onclick="window.open('./assets/coffeeOrders-Jul27.xlsx')"
                 >
                   Download Excel
                 </button>
@@ -553,7 +553,7 @@ HR Analytics Dashboard | Insights & Performance Metrics
               class="btn btn-color-2 project-btn"
               onclick="location.href='https://www.notion.so/Coffee-Sales-Insight-and-Executive-Summary-2132c7b63f0080e1a041d158130c64d4?source=copy_link'"
             >
-              Insights & Recommendations
+              Insights 
             </button> 
          
    
