--- a/index.html
+++ b/index.html
@@ -457,6 +457,18 @@ HR Analytics Dashboard | Insights & Performance Metrics
             <h2 class="experience-sub-title project-title">
               Employee Mobility & Retention Dashboard
             </h2>
+
+ <!-- 👆 在这里添加技术栈标签 👇 -->
+  <div class="tech-tags">
+
+  <span class="tag python">Python</span>
+  <span class="tag mysql">MySQL</span>
+  <span class="tag tableau">Tableau</span>
+  <span class="tag etl">ETL Pipeline</span>
+  <span class="tag views">SQL Views</span>
+   <span class="tag time-series">Time Series</span>
+</div>
+
             <div class="btn-container">
               <div class="btn-container">
                         <button
