remove cv button

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
         <h1 class="title">Jie Liang</h1>
         <p class="section__text__p2">Data Analyst</p>
         <div class="btn-container">
-          <button
+          <!-- <button
             class="btn btn-color-2"
             onclick="window.open('./assets/Jie_da_en_flc_jun16 2025.pdf')"
           >
             Download CV
-          </button>
+          </button> -->
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
             Contact Info
           </button>
